--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1300">
     <title>SEICO</title>
     <meta name="theme-color" content="#9b35c1">
     <link type="image/svg" rel="shortcut icon" href="/favicon.svg">
@@ -72,20 +72,20 @@
 
     <div class="designer section container wrap">
         <p class="designer-item">
-            Designer: <br> 
-            Tomoko Tomita  <br>
-            Manufacturer: SEIKO  <br>
-            Automatic self-winding  <br>
-            movement  <br>
-            Calibre 6R15  <br>
+            Designer: <br>
+            Tomoko Tomita <br>
+            Manufacturer: SEIKO <br>
+            Automatic self-winding <br>
+            movement <br>
+            Calibre 6R15 <br>
             23 Jewels
         </p>
         <p class="designer-item">
-            50 hour power  <br>
-            reserve  <br>
-            Diameter 41mm  <br>
-            Thickness 14.3 mm  <br>
-            Weight: 70 g (without <br> strap)  <br>
+            50 hour power <br>
+            reserve <br>
+            Diameter 41mm <br>
+            Thickness 14.3 mm <br>
+            Weight: 70 g (without <br> strap) <br>
             Leather Strap
         </p>
 
