--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link type="image/svg" rel="shortcut icon" href="/favicon.svg">
 
 
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css?ver=1234">
 
 </head>
 
@@ -91,7 +91,72 @@
 
     </div>
 
+    <div class="section">
+        <video src="#" autoplay poster="./img/bg-6.jpg" muted></video>
+    </div>
 
+    <section class="burger">
+        <div class="container wrap">
+            <h2>Seiko Discus Burger</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+            </p>
+        </div>
+        <img src="img/bg-5.jpg" class="burger__bg" alt="bg">
+    </section>
+
+    <div class="section slider">
+        <div class="slider-item last">
+            <div class="container wrap">
+                <p>
+                    Первые часы, выпущенные под брендом Seiko, появились в продаже в 1924 году. В 1969 году Seiko
+                    представила часы Astron, первые кварцевые часы.
+                    <br>
+                    <br>
+                    Когда они были представлены, их стоимость равнялась стоимости среднего по размеру автомобиля.
+                    Позднее Seiko пошла дальше и представила первый кварцевый хронограф.
+                    <br>
+                    <br>
+                    В 1985 году Seiko и Orient Watches организовали совместное предприятие.
+                </p>
+                <p>
+                    Основатель <br>
+                    Хаттори Кинтаро
+                </p>
+            </div>
+            <img src="img/bg-9.jpg" alt="bg">
+        </div>
+        <div class="slider-item">
+            <img src="img/bg-8.jpg" alt="bg">
+        </div>
+        <div class="slider-item">
+            <div class="container wrap">
+                <p>
+                    Компания стала акционерным обществом (K. Hattori & Co.) в 1917 году и была пе- реименована в 1983
+                    году
+                    в Hattori Seiko Co. Ltd.
+                </p>
+                <p>
+                    После перестраивания и создания своих операционных подразделений (таких как Seiko Watch Corporation
+                    и Seiko Clock Inc.) в 2001 году компания стала холдингом и с 1 июля 2007 года стала называться Seiko
+                </p>
+            </div>
+            <img src="img/bg-7.jpg" alt="bg">
+        </div>
+    </div>
+
+    <footer class="footer">
+        <p class="container wrap footer__text">
+            <span>セイコーホールディングス株式会社</span>
+            <img src="img/seiko.png" alt="seiko">
+            <span>Seiko Holdings Corporation</span>
+        </p>
+    </footer>
+
+    <script src="./js/jquery-3.7.1.min.js"></script>
+    <script src="./js/slick.min.js"></script>
+    <script src="./js/script.js?ver=1234"></script>
 
 </body>
 
