--- a/index.html
+++ b/index.html
@@ -28,11 +28,15 @@
     </header>
 
     <main class="main fx-col" id="main">
-        <video src="#" autoplay muted poster="./img/main.jpg"></video>
-        <p class="wrap main__text container">
+        <video src="./vid/1.mp4" autoplay muted poster="./img/main.jpg">
+            <source src="./vid/1.ogv" type="video/ogg">
+            <source src="./vid/1.webm" type="video/webm">
+        </video>
+
+        <!-- <p class="wrap main__text container">
             <span>セイコーホールディングス株式会社</span>
             <span>Seiko Holdings Corporation</span>
-        </p>
+        </p> -->
     </main>
 
     <div class="section second wrap">
@@ -90,7 +94,7 @@
     </div>
 
     <div class="section">
-        <video src="#" autoplay poster="./img/bg-6.jpg" muted></video>
+        <video src="./vid/4.mp4" autoplay loop poster="./img/bg-6.jpg" muted></video>
     </div>
 
     <section class="burger">
